# OpenGLC-

./: 01Window.cpp  02Dot.cpp  02Dots.cpp  02DotsRandom.cpp  02Line.cpp  02Lines.cpp  03Triangle.cpp  03Triangles.cpp  04Shaders.cpp  04ShadersRainbowTriangle.cpp  05UniformVariable.cpp  06Translation.cpp  07Rotation.cpp  07RotationDot.cpp  07RotationLine.cpp  08Texture.cpp  08TextureCubeRotate.cpp  08TextureLearnOpenGLSample.cpp  08TextureTriangle.cpp  08TextureTriangleLearnOpenGLSampleRotate.cpp  08TextureTriangleRotate.cpp  09Coordinates.cpp  11Model3D.cpp  11Model3DFbx.cpp  12Sound.cpp  13Animation.cpp  14GUIIntro.cpp  14GUIRender.cpp  14GUIStaticLines.cpp  CMakeLists.txt  ReadMe.md  notes.db  test.cpp  test2.cpp  vcpkg.json
04ShadersDir/: ShadersVertexRainbowTriangle.glsl
05UniformVariablesDir/: UniformVariableVertex.glsl
06TranslationDir/: TranslationFragment.glsl
07RotationDir/: RotationVertex.glsl
08TextureDir/: TextureTriangleRotateVertex.glsl
Assets/: Char3.Fbx
GettingStarted/: 02Dot.cpp  02Dots.cpp  02DotsMultiVBO.cpp  02DotsRandom.cpp  02Line.cpp  02Lines.cpp  03Triangle.cpp  03Triangles.cpp  04Shaders.cpp  04ShadersRainbowTriangle.cpp  05UniformVariable.cpp  06Translation.cpp  07Rotation.cpp  07RotationDot.cpp  07RotationLine.cpp  08Texture.cpp  08TextureCubeRotate.cpp  08TextureLearnOpenGLSample.cpp  08TextureTriangle.cpp  08TextureTriangleLearnOpenGLSampleRotate.cpp  08TextureTriangleRotate.cpp  09Coordinates.cpp  09CoordinatesCube.cpp  09CoordinatesCubes.cpp  10Camera.cpp  10CameraCrazyDots.cpp  10CameraStaticDots.cpp  10CameraStaticLines.cpp
GettingStarted/Shaders/08TextureDir/: TextureTriangleRotateVertex.glsl
GettingStarted/Shaders/10CameraDir/: CameraFragmentDots.glsl
custom/Pong/: otherFunctions.hpp  pong.cpp
custom/Pong/Shaders/: defaultFragment.glsl
custom/upToLightingReview/: ReadMe.md  phong.cpp
custom/upToLightingReview/Shaders/: phongFragment.glsl  phongVertex.glsl
include/: jesseShader.h
librrariesandincludes/include/imgui/: imgui_impl_glfw.cpp  imgui_impl_glut.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3_loader.h  imgui_impl_win32.cpp
librrariesandincludes/include/learnopengl/: animation.h  bone.h  model.h  model_animation.h
