cmake_minimum_required(VERSION 3.22)
project(CPPOpenGL)

set(CMAKE_CXX_STANDARD 23)
include("D:/Other/New folder/vcpkg/scripts/buildsystems/vcpkg.cmake")
include_directories("include")

find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(assimp CONFIG REQUIRED)
find_package(GLEW REQUIRED)
find_package(glfw3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
configure_file(configuration/root_directory.h.in configuration/root_directory.h)

macro (add_executable_and_libs _name)
    # invoke built-in add_executable
    _add_executable(${ARGV})
    if (TARGET ${_name})
        target_link_libraries(${_name} PRIVATE GLUT::GLUT)
        target_link_libraries(${_name} PRIVATE ${OPENGL_gl_LIBRARY})
        target_link_libraries(${_name} PRIVATE assimp::assimp)
        target_link_libraries(${_name} PRIVATE GLEW::GLEW)
        target_link_libraries(${_name} PRIVATE glad::glad)
        target_link_libraries(${_name} PRIVATE glfw)
    endif()
endmacro()

file(GLOB GLSL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*Dir/*.glsl")
file(COPY ${GLSL_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Shaders)
file(GLOB GLSL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/images/*")
file(COPY ${GLSL_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Images)

add_executable_and_libs(01Window 01Window.cpp)
add_executable_and_libs(02Dot 02Dot.cpp)
add_executable_and_libs(02Dots 02Dots.cpp)
add_executable_and_libs(02DotsRandom 02DotsRandom.cpp)
add_executable_and_libs(02Line 02Line.cpp)
add_executable_and_libs(02Lines 02Lines.cpp)
add_executable_and_libs(03Triangle 03Triangle.cpp)
add_executable_and_libs(03Triangles 03Triangles.cpp)
add_executable_and_libs(04Shaders 04Shaders.cpp)
add_executable_and_libs(05UniformVariable 05UniformVariable.cpp)
add_executable_and_libs(06Translation 06Translation.cpp)
add_executable_and_libs(07Rotation 07Rotation.cpp)
#add_executable_and_libs(08Texture 08Texture.cpp)
add_executable_and_libs(08TextureLearnOpenGLSample 08TextureLearnOpenGLSample.cpp)
add_executable(08Texture 08Texture.cpp)
target_link_libraries(08Texture PRIVATE GLUT::GLUT)
target_link_libraries(08Texture PRIVATE ${OPENGL_gl_LIBRARY})
target_link_libraries(08Texture PRIVATE assimp::assimp)
target_link_libraries(08Texture PRIVATE GLEW::GLEW)
target_link_libraries(08Texture PRIVATE glfw)
add_executable_and_libs(test2 test2.cpp)

