cmake_minimum_required(VERSION 3.22)
project(CPPOpenGL)

set(CMAKE_CXX_STANDARD 23)
set(VCPKG_FEATURE_FLAGS manifests)
include("D:/Other/New folder/vcpkg/scripts/buildsystems/vcpkg.cmake")
include_directories("librrariesandincludes/include")

find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_library( ASSIMP_LIBRARY assimp-vc142-mtd)
find_package(assimp REQUIRED)
find_package(GLEW REQUIRED)
find_package(SDL2 CONFIG REQUIRED)
find_package(FTGL CONFIG REQUIRED)
find_package(freetype CONFIG REQUIRED)


find_package(glfw3 REQUIRED)
find_library( GLFW3_LIBRARY glfw3dll )
find_package(glad CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(imgui CONFIG REQUIRED)


link_directories(${CMAKE_SOURCE_DIR}/librrariesandincludes/libraries)


macro (add_executable_and_libs _name)
    # invoke built-in add_executable
    _add_executable(${ARGV})
    if (TARGET ${_name})
        target_link_libraries(${_name} PRIVATE GLUT::GLUT)
        target_link_libraries(${_name} PRIVATE ${OPENGL_gl_LIBRARY})
#        target_link_libraries(${_name} PRIVATE ${GLFW3_LIBRARY})
#        target_link_libraries(${_name} PRIVATE ${ASSIMP_LIBRARY})
#        target_link_libraries(${_name} PRIVATE irrKlang)
#        target_link_libraries(${_name} PRIVATE assimp::assimp)
        target_link_libraries(${_name} PRIVATE GLEW::GLEW)
#        target_link_libraries(${_name} PRIVATE glad::glad)
#        target_link_libraries(${_name} PRIVATE glfw)
#        target_link_libraries(${_name} PRIVATE glm::glm)
#        target_link_libraries(${_name} PRIVATE imgui::imgui)
    endif()
endmacro()


file(GLOB oldShaders "${CMAKE_CURRENT_BINARY_DIR}/Shaders/*.glsl")
file(REMOVE "${oldShaders}")
file(GLOB oldImages "${CMAKE_CURRENT_BINARY_DIR}/Images/*")
file(REMOVE "${oldImages}")

file(GLOB GLSL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/GettingStarted/Shaders/*Dir/*.glsl")
file(COPY ${GLSL_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Shaders)
file(GLOB GLSL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Custom/Pong/Shaders/*.glsl")
file(COPY ${GLSL_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Shaders)
file(GLOB GLSL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/Custom/upToLightingReview/Shaders/*.glsl")
file(COPY ${GLSL_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Shaders)
file(GLOB GLSL_FILES "GettingStarted/Images/*")
file(COPY ${GLSL_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Images)

file(GLOB GLSL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*Dir/*.glsl")
file(COPY ${GLSL_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Shaders)
file(GLOB GLSL_FILES "Assets/*")
file(COPY ${GLSL_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Assets)

file(GLOB DLL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/librrariesandincludes/dlls/*.dll")
file(COPY ${DLL_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)

#add_executable_and_libs(01Window GettingStarted/01Window.cpp)
#add_executable_and_libs(02Dot GettingStarted/02Dot.cpp)
#add_executable_and_libs(02Dots GettingStarted/02Dots.cpp)
#add_executable_and_libs(02DotsMultiVBO GettingStarted/02DotsMultiVBO.cpp)
#add_executable_and_libs(02DotsRandom GettingStarted/02DotsRandom.cpp)
#add_executable_and_libs(02DotsRandomGLFW GettingStarted/02DotsRandomGLFW.cpp)
#add_executable_and_libs(02Line GettingStarted/02Line.cpp)
#add_executable_and_libs(02Lines GettingStarted/02Lines.cpp)
#add_executable_and_libs(03Triangle GettingStarted/03Triangle.cpp)
#add_executable_and_libs(03Triangles GettingStarted/03Triangles.cpp)
#add_executable_and_libs(04Shaders GettingStarted/04Shaders.cpp)
#add_executable_and_libs(05UniformVariable GettingStarted/05UniformVariable.cpp)
#add_executable_and_libs(06Translation GettingStarted/06Translation.cpp)
#add_executable_and_libs(07Rotation GettingStarted/07Rotation.cpp)
#add_executable_and_libs(07RotationLine GettingStarted/07RotationLine.cpp)
#add_executable_and_libs(07RotationDot GettingStarted/07RotationDot.cpp)
#add_executable_and_libs(08Texture GettingStarted/08Texture.cpp)
#add_executable_and_libs(08TextureLearnOpenGLSample GettingStarted/08TextureLearnOpenGLSample.cpp)
#add_executable_and_libs(08TextureCubeRotate GettingStarted/08TextureCubeRotate.cpp)
#add_executable_and_libs(08TextureTriangle GettingStarted/08TextureTriangle.cpp)
#add_executable_and_libs(08TextureTriangleRotate GettingStarted/08TextureTriangleRotate.cpp)
#add_executable_and_libs(08TextureTriangleLearnOpenGLSampleRotate GettingStarted/08TextureTriangleLearnOpenGLSampleRotate.cpp)
#add_executable_and_libs(09Coordinates GettingStarted/09Coordinates.cpp)
#add_executable_and_libs(09CoordinatesCube GettingStarted/09CoordinatesCube.cpp)
#add_executable_and_libs(09CoordinatesCubes GettingStarted/09CoordinatesCubes.cpp)
#add_executable_and_libs(10Camera GettingStarted/10Camera.cpp)
#add_executable_and_libs(10CameraCrazyDots GettingStarted/10CameraCrazyDots.cpp)
#add_executable_and_libs(10CameraStaticDots GettingStarted/10CameraStaticDots.cpp)
#add_executable_and_libs(10CameraStaticLines GettingStarted/10CameraStaticLines.cpp)
#add_executable_and_libs(11Model3D 11Model3D.cpp)
#add_executable_and_libs(11Model3DFbx 11Model3DFbx.cpp)
#add_executable_and_libs(12Sound 12Sound.cpp)
#add_executable_and_libs(13Animation 13Animation.cpp)
#add_executable_and_libs(14GUIIntro 14GUIIntro.cpp)
#add_executable_and_libs(14GUIRender 14GUIRender.cpp)
#add_executable_and_libs(14GUIStaticLines 14GUIStaticLines.cpp)
#add_executable(14GUIRender 14GUIRender.cpp)
#target_link_libraries(08Texture PRIVATE ${OPENGL_gl_LIBRARY})
#target_link_libraries(08Texture PRIVATE assimp::assimp)
#target_link_libraries(08Texture PRIVATE glm::glm)
#target_link_libraries(08Texture PRIVATE glad::glad)

#add_executable_and_libs(test2 test2.cpp)

set(exeName phong)
add_executable(${exeName} custom/upToLightingReview/${exeName}.cpp)
#target_link_libraries(${exeName} PRIVATE SDL2::SDL2 SDL2::SDL2main)
#target_link_libraries(${exeName} PRIVATE GLUT::GLUT)
target_link_libraries(${exeName} PRIVATE ${OPENGL_gl_LIBRARY})
target_link_libraries(${exeName} PRIVATE ${GLFW3_LIBRARY})
#        target_link_libraries(${_name} PRIVATE ${ASSIMP_LIBRARY})
#        target_link_libraries(${_name} PRIVATE irrKlang)
#        target_link_libraries(${_name} PRIVATE assimp::assimp)
#target_link_libraries(${exeName} PRIVATE GLEW::GLEW)
target_link_libraries(${exeName} PRIVATE glad::glad)
#target_link_libraries(${exeName} PRIVATE glfw)
#target_link_libraries(${exeName} PRIVATE freetype)
target_link_libraries(${exeName} PRIVATE glm::glm)
#        target_link_libraries(${_name} PRIVATE imgui::imgui)
#target_link_libraries(${exeName} PRIVATE ftgl)
